--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "axios": "^0.27.2",
     "ejs": "^3.1.8",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "body-parser": "^1.20.0",
+    "multer": "^1.4.4"
   }
 }
